@@ -3,6 +3,7 @@ Objective Caml 3.12.2:
 
 Bug fixes:
 - problem with printing of string literals in camlp4 (reported on caml-list)
+- PR#4697: Unix.putenv leaks memory on failure
 - PR#4705: camlp4 does not allow to define types with `True or `False
 - PR#4937: camlp4 incorrectly handles optional arguments if 'option' is redefined
 - PR#5024: camlp4r now handles underscores in irrefutable patern matching of records
